--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "gen:files": "node ./scripts/generate_files_manifest.js"
   },
   "dependencies": {
     "@radix-ui/react-switch": "^1.2.6",
@@ -15,6 +16,7 @@
     "@radix-ui/themes": "^3.2.1",
     "classnames": "^2.5.1",
     "docx": "^8.5.0",
+    "docx-preview": "^0.3.5",
     "dompurify": "^3.2.6",
     "lucide-react": "^0.441.0",
     "marked": "^16.2.1",
