--- a/public/files/manifest.json
+++ b/public/files/manifest.json
@@ -1,5 +1,5 @@
 {
-  "generatedAt": "2025-09-16T12:00:10.605Z",
+  "generatedAt": "2025-09-22T10:50:29.419Z",
   "categories": [
     {
       "key": "contracts",
@@ -222,168 +222,168 @@
       "label": "Позови",
       "files": [
         {
-          "name": "Заява про видачу судового наказу",
+          "name": "Заява Pro Vidachu Sudovogo Nakazu",
           "filename": "zayava_pro_vidachu_sudovogo_nakazu_.docx",
           "path": "/files/claims/zayava_pro_vidachu_sudovogo_nakazu_.docx",
           "ext": "docx",
           "size": 18110
         },
         {
-          "name": "Заява про встановлення родинних відносин",
+          "name": "Заява Pro Vstanovlennya Rodunnux Vidnosun",
           "filename": "Zayava_pro_vstanovlennya_rodunnux_vidnosun.docx",
           "path": "/files/claims/Zayava_pro_vstanovlennya_rodunnux_vidnosun.docx",
           "ext": "docx",
           "size": 22256
         },
         {
-          "name": "Заява про забезпечення позову",
+          "name": "Заява Pro Zabezpechennya Pozovu",
           "filename": "Zayava_pro_zabezpechennya_pozovu.docx",
           "path": "/files/claims/Zayava_pro_zabezpechennya_pozovu.docx",
           "ext": "docx",
           "size": 20883
         },
         {
-          "name": "Позов за борговою розпискою",
+          "name": "Позов Borgova Rozpiska",
           "filename": "pozov_borgova_rozpiska.rtf",
           "path": "/files/claims/pozov_borgova_rozpiska.rtf",
           "ext": "rtf",
           "size": 506709
         },
         {
-          "name": "Позов до приватної особи",
+          "name": "Позов Do Privatnoi Osobi",
           "filename": "Pozov_do_privatnoi_osobi.doc",
           "path": "/files/claims/Pozov_do_privatnoi_osobi.doc",
           "ext": "doc",
           "size": 60416
         },
         {
-          "name": "Позов до СМР",
+          "name": "Позов Do SMR",
           "filename": "Pozov_do_SMR.doc",
           "path": "/files/claims/Pozov_do_SMR.doc",
           "ext": "doc",
           "size": 80384
         },
         {
-          "name": "Позов про стягнення аліментів",
+          "name": "Позов Pro Styagnennya Alimentiv",
           "filename": "Pozov_pro_styagnennya_alimentiv.docx",
           "path": "/files/claims/Pozov_pro_styagnennya_alimentiv.docx",
           "ext": "docx",
           "size": 24861
         },
         {
-          "name": "Позов про стягнення коштів на утримання майна",
+          "name": "Позов Pro Styagnennya Koshtiv Na Yntrumaannya Mayna",
           "filename": "Pozov_pro_styagnennya_koshtiv_na_yntrumaannya_mayna.docx",
           "path": "/files/claims/Pozov_pro_styagnennya_koshtiv_na_yntrumaannya_mayna.docx",
           "ext": "docx",
           "size": 36701
         },
         {
-          "name": "Позов про стягнення заробітної плати",
+          "name": "Позов Pro Styagnennya ZP",
           "filename": "Pozov_pro_styagnennya_ZP.docx",
           "path": "/files/claims/Pozov_pro_styagnennya_ZP.docx",
           "ext": "docx",
           "size": 21932
         },
         {
-          "name": "Позов про усунення перешкод",
+          "name": "Позов Pro Ysynennya Pereshkod",
           "filename": "Pozov_pro_ysynennya_pereshkod.docx",
           "path": "/files/claims/Pozov_pro_ysynennya_pereshkod.docx",
           "ext": "docx",
           "size": 24906
         },
         {
-          "name": "Позов про захист честі та гідності",
+          "name": "Позов Pro Zahust Chesti Ta Gidnosti",
           "filename": "Pozov_pro_zahust_chesti_ta_gidnosti.docx",
           "path": "/files/claims/Pozov_pro_zahust_chesti_ta_gidnosti.docx",
           "ext": "docx",
           "size": 32091
         },
         {
-          "name": "Позов про спадкування частки у спільному майні",
+          "name": "Позов Spadkuvannya Chastku Y Spilnomy Mayni",
           "filename": "Pozov_spadkuvannya_chastku_y_spilnomy_mayni.docx",
           "path": "/files/claims/Pozov_spadkuvannya_chastku_y_spilnomy_mayni.docx",
           "ext": "docx",
           "size": 28240
         },
         {
-          "name": "Як діяти у випадку нападу собаки",
+          "name": "Ak Diati U Vipadku Napadu Sobaki",
           "filename": "Ak_diati_u_vipadku_napadu_sobaki.doc",
           "path": "/files/claims/Ak_diati_u_vipadku_napadu_sobaki.doc",
           "ext": "doc",
           "size": 44032
         },
         {
-          "name": "Поділ майна подружжя",
+          "name": "PODIL MAUNA PODRYGYAM",
           "filename": "PODIL_MAUNA_PODRYGYAM.docx",
           "path": "/files/claims/PODIL_MAUNA_PODRYGYAM.docx",
           "ext": "docx",
           "size": 22818
         },
         {
-          "name": "Позовна заява ГБК",
+          "name": "Pozovna Заява GBK",
           "filename": "pozovna_zayava_GBK.docx",
           "path": "/files/claims/pozovna_zayava_GBK.docx",
           "ext": "docx",
           "size": 26617
         },
         {
-          "name": "Позовна заява про стягнення заробітної плати",
+          "name": "Pozovna Заява Pro Styagnennya Zp",
           "filename": "pozovna_zayava_pro_styagnennya_zp.docx",
           "path": "/files/claims/pozovna_zayava_pro_styagnennya_zp.docx",
           "ext": "docx",
           "size": 22103
         },
         {
-          "name": "Позовна заява про стягнення заробітної плати (1)",
+          "name": "Pozovna Заява Pro Styagnennya Zp (1)",
           "filename": "pozovna_zayava_pro_styagnennya_zp (1).docx",
           "path": "/files/claims/pozovna_zayava_pro_styagnennya_zp (1).docx",
           "ext": "docx",
           "size": 22103
         },
         {
-          "name": "Про поновлення на роботі (копія)",
+          "name": "Pro Ponovlennya Na Roboti Copy",
           "filename": "Pro_ponovlennya_na_roboti_copy.docx",
           "path": "/files/claims/Pro_ponovlennya_na_roboti_copy.docx",
           "ext": "docx",
           "size": 24099
         },
         {
-          "name": "Про розірвання шлюбу",
+          "name": "Pro Rozirvannya Shl",
           "filename": "pro_rozirvannya_shl.rtf",
           "path": "/files/claims/pro_rozirvannya_shl.rtf",
           "ext": "rtf",
           "size": 506074
         },
         {
-          "name": "Про стягнення шкоди (ДТП)",
+          "name": "Pro Styagnennua Shkodi DTP",
           "filename": "Pro_styagnennua_shkodi_DTP.docx",
           "path": "/files/claims/Pro_styagnennua_shkodi_DTP.docx",
           "ext": "docx",
           "size": 22526
         },
         {
-          "name": "Визнати таким, що втратив право користуватися (копія)",
+          "name": "Vuznatu Takum Wo Vtratuv Pravo Korustyvatusya Copy",
           "filename": "Vuznatu_takum_wo_vtratuv_pravo_korustyvatusya_copy.docx",
           "path": "/files/claims/Vuznatu_takum_wo_vtratuv_pravo_korustyvatusya_copy.docx",
           "ext": "docx",
           "size": 26996
         },
         {
-          "name": "Заява про встановлення факту належності документа",
+          "name": "Zajava Pro Vstanovlennja Faktu Nalegnosti Dokumentu",
           "filename": "Zajava_pro_vstanovlennja_faktu_nalegnosti_dokumentu.docx",
           "path": "/files/claims/Zajava_pro_vstanovlennja_faktu_nalegnosti_dokumentu.docx",
           "ext": "docx",
           "size": 21558
         },
         {
-          "name": "Зразок позову про скасування адмінпостанови",
+          "name": "Zrazok Pozovu Pro Skasuvanna Adminpostanovi",
           "filename": "Zrazok_pozovu_pro_skasuvanna_adminpostanovi.docx",
           "path": "/files/claims/Zrazok_pozovu_pro_skasuvanna_adminpostanovi.docx",
           "ext": "docx",
           "size": 29265
         },
         {
-          "name": "Зразок скарги на адмінкомісію (новий)",
+          "name": "Zrazok Skargi Na Adminkomisiu New",
           "filename": "Zrazok_skargi_na_adminkomisiu_New.docx",
           "path": "/files/claims/Zrazok_skargi_na_adminkomisiu_New.docx",
           "ext": "docx",
