--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,9 @@
             "destination": "https://legal-ai-api-35dc5cd4fd8d.herokuapp.com/$1"
         },
         {
+            "handle": "filesystem"
+        },
+        {
             "source": "/(.*)",
             "destination": "/"
         }
