--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,15 @@
 {
-    "rewrites": [
+    "routes": [
         {
-            "source": "/api/(.*)",
-            "destination": "https://legal-ai-api-35dc5cd4fd8d.herokuapp.com/$1"
+            "src": "/api/(.*)",
+            "dest": "https://legal-ai-api-35dc5cd4fd8d.herokuapp.com/$1"
         },
         {
             "handle": "filesystem"
         },
         {
-            "source": "/(.*)",
-            "destination": "/"
+            "src": "/(.*)",
+            "dest": "/"
         }
     ]
 }
