--- a/package.json
+++ b/package.json
@@ -17,14 +17,18 @@
     "@radix-ui/themes": "^3.2.1",
     "classnames": "^2.5.1",
     "docx": "^8.5.0",
-    "docx-preview": "^0.3.5",
+    "docx-preview": "^0.3.6",
     "dompurify": "^3.2.6",
     "lucide-react": "^0.441.0",
     "marked": "^16.2.1",
+    "page-count": "^0.0.4",
+    "pdf-parse": "^1.1.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^6.30.1",
-    "tailwind": "^4.0.0"
+    "tailwind": "^4.0.0",
+    "unzipper": "^0.12.3",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
