--- a/package.json
+++ b/package.json
@@ -25,7 +25,12 @@
     "pdf-parse": "^1.1.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^6.30.1",
+    "react-syntax-highlighter": "^15.6.6",
+    "rehype-raw": "^7.0.0",
+    "remark-breaks": "^4.0.0",
+    "remark-gfm": "^4.0.1",
     "tailwind": "^4.0.0",
     "unzipper": "^0.12.3",
     "xml2js": "^0.6.2"
